--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/13/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.9&#176;F</td>
+        <td class="data">60.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.9&#176;F</td>
+        <td class="data">60.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.9&#176;F</td>
+        <td class="data">60.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.0&#176;F</td>
+        <td class="data">39.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,7 +70,7 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.889 inHg (0.015)</td>
+        <td class="data">29.892 inHg (0.015)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:42:36 AM</td>
+          <td class="data">06:43:21 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:16:07 PM</td>
+          <td class="data">07:14:40 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,16 +153,16 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:55:36 PM">
-            95.0</span><br/>
-          <span title="07:15:43 AM">
-            45.6</span>
+          <span title="12:00:01 AM">
+            60.9</span><br/>
+          <span title="12:02:36 AM">
+            60.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:04:42 PM (Sunday)">
-            117.5</span><br/>
-          <span title="07:15:43 AM (Saturday)">
-            45.6</span>
+          <span title="12:00:01 AM (Sunday)">
+            60.9</span><br/>
+          <span title="12:02:36 AM (Sunday)">
+            60.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:55:36 PM" class="hival">
-            95.0</span>
+          <span title="12:00:01 AM" class="hival">
+            60.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:04:42 PM (Sunday)" class="hival">
-            117.5</span>
+          <span title="12:00:01 AM (Sunday)" class="hival">
+            60.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="07:15:43 AM" class="loval">
-            45.6</span>
+          <span title="12:02:36 AM" class="loval">
+            60.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:15:43 AM (Saturday)" class="loval">
-            45.6</span>
+          <span title="12:02:36 AM (Sunday)" class="loval">
+            60.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -235,16 +235,16 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="01:01:40 PM">
-            50.3</span><br/>
-          <span title="04:19:40 PM">
-            23.3</span>
+          <span title="12:00:01 AM">
+            40.5</span><br/>
+          <span title="12:02:36 AM">
+            39.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:23:38 AM (Monday)">
-            58.4</span><br/>
-          <span title="04:19:40 PM (Saturday)">
-            23.3</span>
+          <span title="12:00:01 AM (Sunday)">
+            40.5</span><br/>
+          <span title="12:02:36 AM (Sunday)">
+            39.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -269,16 +269,16 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:42:45 AM">
-            86</span><br/>
-          <span title="04:13:08 PM">
-            9</span>
+          <span title="12:00:01 AM">
+            47</span><br/>
+          <span title="12:00:20 AM">
+            46</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:04:49 AM (Friday)">
-            88</span><br/>
-          <span title="04:59:20 PM (Sunday)">
-            9</span>
+          <span title="12:00:01 AM (Sunday)">
+            47</span><br/>
+          <span title="12:00:20 AM (Sunday)">
+            46</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -303,16 +303,16 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:16:01 AM">
-            29.972</span><br/>
-          <span title="05:41:02 PM">
-            29.818</span>
+          <span title="12:04:00 AM">
+            29.894</span><br/>
+          <span title="12:00:01 AM">
+            29.890</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:56:01 AM (Friday)">
-            30.059</span><br/>
-          <span title="03:40:02 PM (Tuesday)">
-            29.560</span>
+          <span title="12:04:00 AM (Sunday)">
+            29.894</span><br/>
+          <span title="12:00:01 AM (Sunday)">
+            29.890</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="04:18:20 PM">
-            23</span><br/>
-          202
+          <span title="12:00:01 AM">
+            0</span><br/>
+             N/A
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:18:20 PM (Saturday)">
-            23</span><br/>
-          202
+          <span title="12:00:01 AM (Sunday)">
+            0</span><br/>
+             N/A
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 04:18:20 PM">
@@ -407,9 +407,9 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          2</td>
+          0</td>
         <td class="data new_row hilo_week">
-          1</td>
+          0</td>
         <td class="data new_row hilo_month">
           2</td>
         <td class="data new_row hilo_year">
@@ -421,9 +421,9 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          4</td>
+          0</td>
         <td class="data new_row hilo_week">
-          3</td>
+          0</td>
         <td class="data new_row hilo_month">
           3</td>
         <td class="data new_row hilo_year">
@@ -439,12 +439,12 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          2<br/>
-          192
+          0<br/>
+             N/A
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          207
+             N/A
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,16 +470,16 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:15:02 PM">
-            78.7</span><br/>
-          <span title="07:26:01 AM">
-            69.3</span>
+          <span title="12:00:01 AM">
+            74.6</span><br/>
+          <span title="12:00:01 AM">
+            74.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:21:03 PM (Sunday)">
-            91.8</span><br/>
-          <span title="07:26:01 AM (Saturday)">
-            69.3</span>
+          <span title="12:00:01 AM (Sunday)">
+            74.6</span><br/>
+          <span title="12:00:01 AM (Sunday)">
+            74.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -506,15 +506,15 @@
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
-            43</span><br/>
-          <span title="04:48:02 PM">
-            29</span>
+            35</span><br/>
+          <span title="12:00:01 AM">
+            35</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:57:01 AM (Wednesday)">
-            49</span><br/>
-          <span title="12:07:01 AM (Tuesday)">
-            28</span>
+          <span title="12:00:01 AM (Sunday)">
+            35</span><br/>
+          <span title="12:00:01 AM (Sunday)">
+            35</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 9 hours, 12 minutes</td>
+      <td class="data">11 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 9 hours, 12 minutes</td>
+      <td class="data">11 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
