--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/13/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,15 +84,15 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">95.0<br/>
-            <span class="timestamp">02:55:36 PM</span><br/>
-            45.6<br/>
-            <span class="timestamp">07:15:43 AM</span>
+          <td class="data new_row">60.9<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            60.8<br/>
+            <span class="timestamp">12:02:36 AM</span>
           </td>
-          <td class="data new_row">117.5<br/>
-            <span class="timestamp">04:04:42 PM (Sunday)</span><br/>
-            45.6<br/>
-            <span class="timestamp">07:15:43 AM (Saturday)</span>
+          <td class="data new_row">60.9<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span><br/>
+            60.8<br/>
+            <span class="timestamp">12:02:36 AM (Sunday)</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">09/06/2020 04:04:42 PM</span><br/>
@@ -113,11 +113,11 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">95.0<br/>
-            <span class="timestamp">02:55:36 PM</span>
+          <td class="data new_row">60.9<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
-          <td class="data new_row">117.5<br/>
-            <span class="timestamp">04:04:42 PM (Sunday)</span>
+          <td class="data new_row">60.9<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">09/06/2020 04:04:42 PM</span>
@@ -132,11 +132,11 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">45.6<br/>
-            <span class="timestamp">07:15:43 AM</span>
+          <td class="data new_row">60.8<br/>
+            <span class="timestamp">12:02:36 AM</span>
           </td>
-          <td class="data new_row">45.6<br/>
-            <span class="timestamp">07:15:43 AM (Saturday)</span>
+          <td class="data new_row">60.8<br/>
+            <span class="timestamp">12:02:36 AM (Sunday)</span>
           </td>
           <td class="data new_row">45.6<br/>
             <span class="timestamp">09/12/2020 07:15:43 AM</span>
@@ -151,15 +151,15 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">50.3<br/>
-            <span class="timestamp">01:01:40 PM</span><br/>
-            23.3<br/>
-            <span class="timestamp">04:19:40 PM</span>
+          <td class="data new_row">40.5<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            39.9<br/>
+            <span class="timestamp">12:02:36 AM</span>
           </td>
-          <td class="data new_row">58.4<br/>
-            <span class="timestamp">11:23:38 AM (Monday)</span><br/>
-            23.3<br/>
-            <span class="timestamp">04:19:40 PM (Saturday)</span>
+          <td class="data new_row">40.5<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span><br/>
+            39.9<br/>
+            <span class="timestamp">12:02:36 AM (Sunday)</span>
           </td>
           <td class="data new_row">59.6<br/>
             <span class="timestamp">09/02/2020 01:24:38 PM</span><br/>
@@ -180,15 +180,15 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">86<br/>
-            <span class="timestamp">05:42:45 AM</span><br/>
-            9<br/>
-            <span class="timestamp">04:13:08 PM</span>
+          <td class="data new_row">47<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            46<br/>
+            <span class="timestamp">12:00:20 AM</span>
           </td>
-          <td class="data new_row">88<br/>
-            <span class="timestamp">06:04:49 AM (Friday)</span><br/>
-            9<br/>
-            <span class="timestamp">04:59:20 PM (Sunday)</span>
+          <td class="data new_row">47<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span><br/>
+            46<br/>
+            <span class="timestamp">12:00:20 AM (Sunday)</span>
           </td>
           <td class="data new_row">93<br/>
             <span class="timestamp">09/03/2020 06:37:07 AM</span><br/>
@@ -209,15 +209,15 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.972<br/>
-            <span class="timestamp">09:16:01 AM</span><br/>
-            29.818<br/>
-            <span class="timestamp">05:41:02 PM</span>
+          <td class="data new_row">29.894<br/>
+            <span class="timestamp">12:04:00 AM</span><br/>
+            29.890<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
-          <td class="data new_row">30.059<br/>
-            <span class="timestamp">09:56:01 AM (Friday)</span><br/>
-            29.560<br/>
-            <span class="timestamp">03:40:02 PM (Tuesday)</span>
+          <td class="data new_row">29.894<br/>
+            <span class="timestamp">12:04:00 AM (Sunday)</span><br/>
+            29.890<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span>
           </td>
           <td class="data new_row">30.063<br/>
             <span class="timestamp">09/02/2020 09:40:02 AM</span><br/>
@@ -275,14 +275,14 @@
             &#176;
           </td>
           <td class="data new_row">
-            23<br/>
-            202<br/>
-            <span class="timestamp">04:18:20 PM</span>
+            0<br/>
+               N/A<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
-            23<br/>
-            202<br/>
-            <span class="timestamp">04:18:20 PM (Saturday)</span>
+            0<br/>
+               N/A<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -304,9 +304,9 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            2</td>
+            0</td>
           <td class="data new_row">
-            1</td>
+            0</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -317,8 +317,8 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">4</td>
-          <td class="data new_row">3</td>
+          <td class="data new_row">0</td>
+          <td class="data new_row">0</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
           <td class="data new_row">6</td>
@@ -334,12 +334,12 @@
             &#176;
           </td>
           <td class="data new_row">
-            2<br/>
-            192
+            0<br/>
+               N/A
           </td>
           <td class="data new_row">
             0<br/>
-            207
+               N/A
           </td>
           <td class="data new_row">
             0<br/>
@@ -361,16 +361,16 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            78.7<br/>
-            <span class="timestamp">06:15:02 PM</span><br/>
-            69.3<br/>
-            <span class="timestamp">07:26:01 AM</span>
+            74.6<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            74.6<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
-            91.8<br/>
-            <span class="timestamp">06:21:03 PM (Sunday)</span><br/>
-            69.3<br/>
-            <span class="timestamp">07:26:01 AM (Saturday)</span>
+            74.6<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span><br/>
+            74.6<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span>
           </td>
           <td class="data new_row">
             101.9<br/>
@@ -396,16 +396,16 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            43<br/>
+            35<br/>
             <span class="timestamp">12:00:01 AM</span><br/>
-            29<br/>
-            <span class="timestamp">04:48:02 PM</span>
+            35<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
-            49<br/>
-            <span class="timestamp">07:57:01 AM (Wednesday)</span><br/>
-            28<br/>
-            <span class="timestamp">12:07:01 AM (Tuesday)</span>
+            35<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span><br/>
+            35<br/>
+            <span class="timestamp">12:00:01 AM (Sunday)</span>
           </td>
           <td class="data new_row">
             63<br/>
