--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 12:04:00 AM</p>
+    <p class="lastupdate">09/13/2020 12:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.8&#176;F</td>
+        <td class="data">60.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.8&#176;F</td>
+        <td class="data">60.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.8&#176;F</td>
+        <td class="data">60.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.9&#176;F</td>
+        <td class="data">39.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.892 inHg (0.015)</td>
+        <td class="data">29.891 inHg (0.014)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             60.9</span><br/>
-          <span title="12:02:36 AM">
-            60.8</span>
+          <span title="12:05:52 AM">
+            60.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             60.9</span><br/>
-          <span title="12:02:36 AM (Sunday)">
-            60.8</span>
+          <span title="12:05:52 AM (Sunday)">
+            60.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:36 AM" class="loval">
-            60.8</span>
+          <span title="12:05:52 AM" class="loval">
+            60.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:02:36 AM (Sunday)" class="loval">
-            60.8</span>
+          <span title="12:05:52 AM (Sunday)" class="loval">
+            60.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -237,14 +237,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             40.5</span><br/>
-          <span title="12:02:36 AM">
-            39.9</span>
+          <span title="12:06:32 AM">
+            39.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             40.5</span><br/>
-          <span title="12:02:36 AM (Sunday)">
-            39.9</span>
+          <span title="12:06:32 AM (Sunday)">
+            39.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            0</span><br/>
-             N/A
+          <span title="12:07:24 AM">
+            1</span><br/>
+          177
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:00:01 AM (Sunday)">
-            0</span><br/>
-             N/A
+          <span title="12:07:24 AM (Sunday)">
+            1</span><br/>
+          177
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 04:18:20 PM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-             N/A
+          180
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-             N/A
+          180
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 9 hours, 17 minutes</td>
+      <td class="data">11 days, 9 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 9 hours, 17 minutes</td>
+      <td class="data">11 days, 9 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
