--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 12:09:00 AM</p>
+    <p class="lastupdate">09/13/2020 12:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.7&#176;F</td>
+        <td class="data">60.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.7&#176;F</td>
+        <td class="data">60.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.7&#176;F</td>
+        <td class="data">60.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.8&#176;F</td>
+        <td class="data">39.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.891 inHg (0.014)</td>
+        <td class="data">29.892 inHg (0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph S (180&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.6&#176;F</td>
+        <td class="data">74.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             60.9</span><br/>
-          <span title="12:05:52 AM">
-            60.7</span>
+          <span title="12:12:42 AM">
+            60.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             60.9</span><br/>
-          <span title="12:05:52 AM (Sunday)">
-            60.7</span>
+          <span title="12:12:42 AM (Sunday)">
+            60.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:05:52 AM" class="loval">
-            60.7</span>
+          <span title="12:12:42 AM" class="loval">
+            60.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:05:52 AM (Sunday)" class="loval">
-            60.7</span>
+          <span title="12:12:42 AM (Sunday)" class="loval">
+            60.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -237,14 +237,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             40.5</span><br/>
-          <span title="12:06:32 AM">
-            39.8</span>
+          <span title="12:12:42 AM">
+            39.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             40.5</span><br/>
-          <span title="12:06:32 AM (Sunday)">
-            39.8</span>
+          <span title="12:12:42 AM (Sunday)">
+            39.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="12:04:00 AM">
             29.894</span><br/>
-          <span title="12:00:01 AM">
-            29.890</span>
+          <span title="12:14:00 AM">
+            29.886</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:04:00 AM (Sunday)">
             29.894</span><br/>
-          <span title="12:00:01 AM (Sunday)">
-            29.890</span>
+          <span title="12:14:00 AM (Sunday)">
+            29.886</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             74.6</span><br/>
-          <span title="12:00:01 AM">
-            74.6</span>
+          <span title="12:10:00 AM">
+            74.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             74.6</span><br/>
-          <span title="12:00:01 AM (Sunday)">
-            74.6</span>
+          <span title="12:10:00 AM (Sunday)">
+            74.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">90%</td>
+      <td class="data">81%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 9 hours, 22 minutes</td>
+      <td class="data">11 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 9 hours, 22 minutes</td>
+      <td class="data">11 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
