--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 01:29:00 AM</p>
+    <p class="lastupdate">09/13/2020 01:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">57.5&#176;F</td>
+        <td class="data">57.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">57.5&#176;F</td>
+        <td class="data">57.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">57.5&#176;F</td>
+        <td class="data">57.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.0&#176;F</td>
+        <td class="data">40.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">52%</td>
+        <td class="data">53%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.879 inHg (-0.005)</td>
+        <td class="data">29.881 inHg (-0.003)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.2&#176;F</td>
+        <td class="data">74.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             60.9</span><br/>
-          <span title="01:28:22 AM">
-            57.4</span>
+          <span title="01:33:08 AM">
+            57.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             60.9</span><br/>
-          <span title="01:28:22 AM (Sunday)">
-            57.4</span>
+          <span title="01:33:08 AM (Sunday)">
+            57.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:28:22 AM" class="loval">
-            57.4</span>
+          <span title="01:33:08 AM" class="loval">
+            57.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:28:22 AM (Sunday)" class="loval">
-            57.4</span>
+          <span title="01:33:08 AM (Sunday)" class="loval">
+            57.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="01:16:22 AM">
-            52</span><br/>
+          <span title="01:32:36 AM">
+            53</span><br/>
           <span title="12:00:20 AM">
             46</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:16:22 AM (Sunday)">
-            52</span><br/>
+          <span title="01:32:36 AM (Sunday)">
+            53</span><br/>
           <span title="12:00:20 AM (Sunday)">
             46</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          293
+          299
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          293
+          299
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 10 hours, 42 minutes</td>
+      <td class="data">11 days, 10 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 10 hours, 42 minutes</td>
+      <td class="data">11 days, 10 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
