--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 01:54:00 AM</p>
+    <p class="lastupdate">09/13/2020 01:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">56.9&#176;F</td>
+        <td class="data">56.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.9&#176;F</td>
+        <td class="data">40.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.876 inHg (-0.003)</td>
+        <td class="data">29.875 inHg (-0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="12:04:00 AM">
             29.894</span><br/>
-          <span title="01:53:00 AM">
-            29.876</span>
+          <span title="01:58:00 AM">
+            29.875</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:04:00 AM (Sunday)">
             29.894</span><br/>
-          <span title="01:53:00 AM (Sunday)">
-            29.876</span>
+          <span title="01:58:00 AM (Sunday)">
+            29.875</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          308
+          309
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          308
+          309
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 11 hours, 7 minutes</td>
+      <td class="data">11 days, 11 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 11 hours, 7 minutes</td>
+      <td class="data">11 days, 11 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
